# blu-optical-simulation

./: .gitignore  Automotive_Cluster_Demo.blu  BluOpticalSim.spec  CLAUDE.md  CODEX.md  COXED.md  Edge_Lit_LGP_Demo.blu  LICENSE.md  PLAN.MD  PLAN_TASKS.md  README.md  Simple_Box_Demo.blu  _patch_tracer_mp.py  _patch_tracer_mp2.py  app.py  build_exe.bat  build_exe.py  pytest.ini  report.html  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: bsdf-tab-not-visible.md  missing-cylinder-prism-menu-actions.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
assets/: icon.py
backlight_sim/: __version__.py  config.py  update_checker.py
backlight_sim/core/: detectors.py  geometry.py  kpi.py  materials.py  project_model.py  solid_body.py  sources.py  uq.py
backlight_sim/golden/: __init__.py  __main__.py  builders.py  cases.py  report.py
backlight_sim/gui/: angular_distribution_panel.py  bsdf_panel.py  comparison_dialog.py  main_window.py  (+15 more)
backlight_sim/sim/_blu_tracer/: CMakeLists.txt  pyproject.toml
backlight_sim/sim/_blu_tracer/src/: blu_tracer.cpp  bvh.cpp  bvh.hpp  intersect.cpp  intersect.hpp  material.cpp  material.hpp  sampling.cpp  sampling.hpp  types.hpp
dist_assets/: README.txt  generate_samples.py
(+176 files in other folders)
