[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=3.0"]
build-backend = "scikit_build_core.build"

[project]
name = "blu_tracer"
version = "0.1.0"
requires-python = ">=3.12"

[tool.scikit-build]
cmake.build-type = "Release"
# CMakeLists.txt installs to backlight_sim/sim/ already (relative to wheel root).
# Leaving wheel.install-dir unset keeps the wheel root at site-packages,
# so the .pyd lands at site-packages/backlight_sim/sim/blu_tracer*.pyd and is
# importable as `backlight_sim.sim.blu_tracer` (the local source tree package).
